--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hi</title>
+<style>
+    html,body{
+        height: 100%;
+     background: url("i.webp");
+
+     background-size: cover;
+    }
+.puny1{
+    width: 300px;
+    opacity: 0.5;
+}
+.pt2{
+    width: 450px;
+}
+</style>
 </head>
 <body>
     привет123
-<img src="sun.jfif" alt="">
+<img class ="puny1" src="sun.jfif" alt="">
+<img class ="pt2" src="i.webp" alt="">
 </body>
 </html>
