--- a/index.html
+++ b/index.html
@@ -3,30 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site</title>
 </head>
 <body>
-    <style>
-        body {
-            font-size: 100px;
-        }
-        img {
-            width: 300px;
-        }
-        h1 {
-            font-size: 50px;
-            font-family: sans-serif;
-        }
-    </style>
-
-    <script>
-        let logo = ['1.jpg', '2.jpg', '3.jpg', '4.jpg', '5.jpg', '6.jpg', '7.jpg', '8.jpg', '9.jpg', '10.jpg'];
-        let comment = ['Это логотип: NIKE', 'Это логотип: HP', 'Это логотип: ADIDAS', 'Это логотип: PUMA', 'Это логотип: GILLETTE', 'Это логотип: NESTLE', 'Это логотип: ROLEX', 'Это логотип: GUCCI', 'Это логотип: SONY', 'Это логотип: DISNEY',];
-
-        for (let i = 0; i < 10; i++){
-            document.write(`<img src="IMG/${logo[i]}">`
-            + `<h1>${comment[i]}</h1>` + '<br>');
-        }
-    </script>
+    Сайт студента Ефремова Юрия Вячеславовича гр.3319/2
 </body>
 </html>
