--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/header.css">
+    <link rel="stylesheet" href="style/footer.css">
+    <link rel="stylesheet" href="style/body.css">
 </head>
 <body>
-    Сайт студента Ефремова Юрия Вячеславовича гр.3319/2
+    <header>
+        <div class="header__menu">
+            <p>Главная</p>
+            <p>Территория</p>
+            <p>Куда обращаться</p>
+            <p>Органы власти</p>
+            <p>Правовые акты</p>
+        </div>
+        <div class="header__title">
+            <img src="images/logo.webp" alt="">
+            <h1>Вакансии для военкоматов</h1>
+        </div>
+        
+    </header>
+
+    <main>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, fuga? Exercitationem, laborum fuga voluptates nobis veritatis consequatur minima quas ipsam dolores est, minus autem? Ex asperiores rerum ea debitis sed?
+    </main>
+
+    <footer>
+        Контакты
+    </footer>
 </body>
 </html>
