--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="style/body.css">
+    <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
     <header>
@@ -26,7 +27,68 @@
     </header>
 
     <main>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, fuga? Exercitationem, laborum fuga voluptates nobis veritatis consequatur minima quas ipsam dolores est, minus autem? Ex asperiores rerum ea debitis sed?
+        <div class="main__category">
+            <h1>Регионы</h1>
+            <ul>
+                <li>Щёлково</li>
+                <li>Фрязино</li>
+                <li>Лосино-Петровский</li>
+                <li>Щёлковский район МО</li>
+            </ul>
+            <h1>Зарплата</h1>
+            <ul>
+                <li>С указанной зарплатой</li>
+                <li>От 30 000 руб.</li>
+                <li>От 50 000 руб.</li>
+                <li>От 75 000 руб.</li>
+                <li>От 100 000 руб.</li>
+            </ul>
+            <h1>Тип занятости</h1>
+            <ul>
+                <li>Полная</li>
+                <li>Неполная</li>
+                <li>Сменная</li>
+                <li>Вахтовая</li>
+            </ul>
+            <h1>Тип вакансии</h1>
+            <ul>
+                <li>Опыт работы не требуется</li>
+                <li>Не требующие высшего образования</li>
+                <li>Видеовакансии</li>
+            </ul> 
+        </div>
+        <div class="main__vacancy">
+            <div class="main__vacancy-item">
+                <h1>Вакансия 1</h1>
+                <h2>Описание вакансииОписание вакансииОписание вакансииОписание вакансии</h2>
+                <p>Зарплата 100k в месяц</p>
+            </div>
+
+            <div class="main__vacancy-item">
+                <h1>Вакансия 2</h1>
+                <h2>Описание вакансииОписание вакансииОписание вакансииОписание вакансии</h2>
+                <p>Зарплата 100k в месяц</p>
+            </div>
+
+            <div class="main__vacancy-item">
+                <h1>Вакансия 3</h1>
+                <h2>Описание вакансииОписание вакансииОписание вакансииОписание вакансии</h2>
+                <p>Зарплата 100k в месяц</p>
+            </div>
+
+            <div class="main__vacancy-item">
+                <h1>Вакансия 4</h1>
+                <h2>Описание вакансииОписание вакансииОписание вакансииОписание вакансии</h2>
+                <p>Зарплата 100k в месяц</p>
+            </div>
+
+            <div class="main__vacancy-item">
+                <h1>Вакансия 5</h1>
+                <h2>Описание вакансииОписание вакансииОписание вакансииОписание вакансии</h2>
+                <p>Зарплата 100k в месяц</p>
+            </div>
+        </div>
+
     </main>
 
     <footer>
