--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <img src="images/logo.webp" alt="">
             <h1>Вакансии для военкоматов</h1>
         </div>
+        <div class="header__map">
+            <img src="images/map.png" alt="">
+        </div>
         
     </header>
 
@@ -92,7 +95,47 @@
     </main>
 
     <footer>
-        Контакты
+        <div class="footer__info">
+            <div>
+            <h1>Добавить</h1>
+            <ul>
+                <li>Организацию</li>
+                <li>Статью</li>
+                <li>Сообщить об ошибке</li>
+            </ul>
+            </div>
+            <div>
+            <h1>Свяжитесь с нами</h1>
+            <ul>
+                <li>Почта</li>
+                <li>Телефон</li>
+                <li>Соцсети</li>
+            </ul>   
+            </div>
+
+        </div>
+        <div class="footer__emblems">
+            <div>
+                <img src="images/flag1.jpg" alt="">
+                <p>Щёлково</p>
+            </div>
+            <div>
+                <img src="images/flag2.webp" alt="">
+                <p>Фрязино</p>
+            </div>
+            <div>
+                <img src="images/flag3.png" alt="">
+                <p>Лосино-Петровский</p>
+            </div>
+            <div>
+                <img src="images/flag4.png" alt="">
+                <p>Московская область</p>
+            </div>
+
+        </div>
+        <div class="footer__email">
+
+        </div>
     </footer>
 </body>
 </html>
