--- a/index.html
+++ b/index.html
@@ -30,36 +30,43 @@
     </header>
 
     <main>
-        <div class="main__category">
-            <h1>Регионы</h1>
-            <ul>
-                <li>Щёлково</li>
-                <li>Фрязино</li>
-                <li>Лосино-Петровский</li>
-                <li>Щёлковский район МО</li>
-            </ul>
-            <h1>Зарплата</h1>
-            <ul>
-                <li>С указанной зарплатой</li>
-                <li>От 30 000 руб.</li>
-                <li>От 50 000 руб.</li>
-                <li>От 75 000 руб.</li>
-                <li>От 100 000 руб.</li>
-            </ul>
-            <h1>Тип занятости</h1>
-            <ul>
-                <li>Полная</li>
-                <li>Неполная</li>
-                <li>Сменная</li>
-                <li>Вахтовая</li>
-            </ul>
-            <h1>Тип вакансии</h1>
-            <ul>
-                <li>Опыт работы не требуется</li>
-                <li>Не требующие высшего образования</li>
-                <li>Видеовакансии</li>
-            </ul> 
+        <div class="main__left_block">
+            <div class="main__category">
+                <h1>Регионы</h1>
+                <ul>
+                    <li>Щёлково</li>
+                    <li>Фрязино</li>
+                    <li>Лосино-Петровский</li>
+                    <li>Щёлковский район МО</li>
+                </ul>
+                <h1>Зарплата</h1>
+                <ul>
+                    <li>С указанной зарплатой</li>
+                    <li>От 30 000 руб.</li>
+                    <li>От 50 000 руб.</li>
+                    <li>От 75 000 руб.</li>
+                    <li>От 100 000 руб.</li>
+                </ul>
+                <h1>Тип занятости</h1>
+                <ul>
+                    <li>Полная</li>
+                    <li>Неполная</li>
+                    <li>Сменная</li>
+                    <li>Вахтовая</li>
+                </ul>
+                <h1>Тип вакансии</h1>
+                <ul>
+                    <li>Опыт работы не требуется</li>
+                    <li>Не требующие высшего образования</li>
+                    <li>Видеовакансии</li>
+                </ul> 
+            </div>
+            <div class="main__ad">
+                <img src="images/advertisement.webp" alt="">
+                <img class="pic2" src="images/advertisement2.webp" alt="">
+            </div>
         </div>
+
         <div class="main__vacancy">
             <div class="main__vacancy-item">
                 <h1>Вакансия 1</h1>
