--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>m-office.ru</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/footer.css">
@@ -63,6 +63,7 @@
             </div>
             <div class="main__ad">
                 <img src="images/advertisement.webp" alt="">
+                <hr>
                 <img class="pic2" src="images/advertisement2.webp" alt="">
             </div>
         </div>
@@ -96,52 +97,74 @@
                 <h1>Вакансия 5</h1>
                 <h2>Описание вакансииОписание вакансииОписание вакансииОписание вакансии</h2>
                 <p>Зарплата 100k в месяц</p>
+            </div>            
+            <div class="main__vacancy-item">
+                <h1>Вакансия 6</h1>
+                <h2>Описание вакансииОписание вакансииОписание вакансииОписание вакансии</h2>
+                <p>Зарплата 100k в месяц</p>
             </div>
         </div>
+
+
 
     </main>
 
     <footer>
         <div class="footer__info">
             <div>
-            <h1>Добавить</h1>
-            <ul>
-                <li>Организацию</li>
-                <li>Статью</li>
-                <li>Сообщить об ошибке</li>
-            </ul>
+                <h1>Добавить</h1>
+                <ul>
+                    <li>Организацию
+                        <img src="images/logo2.webp" alt="">
+                    </li>
+                    <li>Статью
+                        <img src="images/article.webp" alt="">
+                    </li>
+                    <li>Сообщить об ошибке
+                        <img src="images/help.webp" alt="">
+                    </li>
+                </ul>
             </div>
             <div>
-            <h1>Свяжитесь с нами</h1>
-            <ul>
-                <li>Почта</li>
-                <li>Телефон</li>
-                <li>Соцсети</li>
-            </ul>   
+                <h1>Свяжитесь с нами</h1>
+                <ul>
+                    <li>Почта
+                        <img src="images/pochta.webp" alt="">
+                    </li>
+                    <li>Телефон
+                        <img src="images/tel.webp" alt="">
+                    </li>
+                    <li>Соцсети
+                        <img src="images/telegram.webp" alt="">
+                        <img src="images/whatsapp.webp" alt="">
+                        <img src="images/vk.webp" alt="">
+                        <img src="images/youtube.webp" alt="">
+                    </li>
+                </ul>   
             </div>
 
         </div>
         <div class="footer__emblems">
-            <div>
+            <div class="footer__emblems-item">
                 <img src="images/flag1.jpg" alt="">
                 <p>Щёлково</p>
             </div>
-            <div>
+            <div class="footer__emblems-item">
                 <img src="images/flag2.webp" alt="">
                 <p>Фрязино</p>
             </div>
-            <div>
+            <div class="footer__emblems-item">
                 <img src="images/flag3.png" alt="">
                 <p>Лосино-Петровский</p>
             </div>
-            <div>
+            <div class="footer__emblems-item">
                 <img src="images/flag4.png" alt="">
                 <p>Московская область</p>
             </div>
 
         </div>
-        <div class="footer__email">
-
+        <div class="copyright">
+            ©m-office.ru все права защищены©
         </div>
     </footer>
 </body>
