--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <header>
         <div class="header__menu">
-            <p>Главная</p>
-            <p>Территория</p>
-            <p>Куда обращаться</p>
-            <p>Органы власти</p>
-            <p>Правовые акты</p>
+            <a href="index.html"><p>Главная</p></a>
+            <a href="index.html"><p>Территория</p></a>
+            <a href="index.html"><p>Куда обращаться</p></a>
+            <a href="index.html"><p>Органы власти</p></a>
+            <a href="index.html"><p>Правовые акты</p></a>
         </div>
         <div class="header__title">
             <img src="images/logo.webp" alt="">
